# Advanced-Audience-Intelligence-Real-Time-Enrichment

./: README.md  pyproject.toml
src/advanced_audience_intelligence_real_time_enrichment/: crew.py  main.py
src/advanced_audience_intelligence_real_time_enrichment/config/: agents.yaml  tasks.yaml
src/advanced_audience_intelligence_real_time_enrichment/tools/: customer_analytics_tool.py  customer_data_enrichment.py
