[project]
name = "advanced_audience_intelligence_real_time_enrichment"
version = "0.1.0"
description = "advanced_audience_intelligence_real_time_enrichment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.11.0",
]

[project.scripts]
advanced_audience_intelligence_real_time_enrichment = "advanced_audience_intelligence_real_time_enrichment.main:run"
run_crew = "advanced_audience_intelligence_real_time_enrichment.main:run"
train = "advanced_audience_intelligence_real_time_enrichment.main:train"
replay = "advanced_audience_intelligence_real_time_enrichment.main:replay"
test = "advanced_audience_intelligence_real_time_enrichment.main:test"
run_with_trigger = "advanced_audience_intelligence_real_time_enrichment.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
